# auto_space_traders

./: .gitignore  generate_sdk.sh
auto_space_traders_client/: Cargo.toml
auto_space_traders_client/src/: main.rs
auto_space_traders_sdk/: Cargo.toml
auto_space_traders_sdk/src/apis/: agents_api.rs  contracts_api.rs  factions_api.rs  fleet_api.rs  systems_api.rs
auto_space_traders_sdk/src/models/: accept_contract_200_response_data.rs  agent.rs  chart.rs  connected_system.rs  contract_deliver_good.rs  cooldown.rs  extract_resources_request.rs  extraction_yield.rs  faction.rs  faction_symbols.rs  faction_trait.rs  get_my_agent_200_response.rs  get_system_waypoints_traits_parameter.rs  jettison_request.rs  jump_gate.rs  jump_ship_200_response_data.rs  jump_ship_request.rs  market_trade_good.rs  market_transaction.rs  meta.rs  mod.rs  patch_ship_nav_request.rs  refuel_ship_request.rs  register_request.rs  scanned_waypoint.rs  ship.rs  ship_cargo.rs  ship_cargo_item.rs  ship_crew.rs  ship_engine.rs  ship_frame.rs  ship_fuel.rs  ship_fuel_consumed.rs  ship_modification_transaction.rs  ship_module.rs  ship_mount.rs  ship_nav.rs  ship_nav_route.rs  ship_nav_route_waypoint.rs  ship_reactor.rs  (+16 more)
