[package]
name = "auto_space_traders_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.105"
url = "2.4.0"
uuid = { version = "1.4.1", features = ["serde"] }
[dependencies.reqwest]
version = "0.11.18"
features = ["json", "multipart"]
